RESOLVED FIXED135310
Parent fullscreen from window instead of view
https://bugs.webkit.org/show_bug.cgi?id=135310
Summary Parent fullscreen from window instead of view
Jeremy Jones
Reported 2014-07-25 16:14:26 PDT
'parent fullscren from window instead of view
Attachments
Patch (5.70 KB, patch)
2014-07-25 16:19 PDT, Jeremy Jones
no flags
Patch (5.70 KB, patch)
2014-07-25 16:20 PDT, Jeremy Jones
jer.noble: review+
Patch for landing. (6.04 KB, patch)
2014-07-25 16:42 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2014-07-25 16:19:05 PDT
Jeremy Jones
Comment 2 2014-07-25 16:20:24 PDT
Jeremy Jones
Comment 3 2014-07-25 16:23:44 PDT
Jer Noble
Comment 4 2014-07-25 16:36:59 PDT
Comment on attachment 235551 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235551&action=review > Source/WebKit/mac/ChangeLog:7 > + Reviewed by NOBODY (OOPS!). > + This and... > Source/WebKit2/ChangeLog:7 > + Reviewed by NOBODY (OOPS!). > + ...this could use an explanation about why switching from view-parented to window-parented fixes the rotation problem. Other than that, looks good.
Jeremy Jones
Comment 5 2014-07-25 16:42:41 PDT
Created attachment 235553 [details] Patch for landing.
Jeremy Jones
Comment 6 2014-07-25 16:47:22 PDT
This also needs a WK2 reviewer.
WebKit Commit Bot
Comment 7 2014-07-25 17:43:37 PDT
Comment on attachment 235553 [details] Patch for landing. Clearing flags on attachment: 235553 Committed r171635: <http://trac.webkit.org/changeset/171635>
Note You need to log in before you can comment on or make changes to this bug.