Parent fullscreen from window instead of view https://bugs.webkit.org/show_bug.cgi?id=135310

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-07-25
Reviewed by Jer Noble.

Parenting in the view causes an incorrect animation to fullscreen, and can cause
fullscreen to only expand to the size of the view instead of the whole window.

Source/WebKit/mac:
* WebView/WebView.mm:
(-[WebView _enterFullscreenForNode:]): Pass window instead of view.

Source/WebKit2:
* UIProcess/ios/WebVideoFullscreenManagerProxy.mm:
(WebKit::WebVideoFullscreenManagerProxy::setupFullscreenWithID): pass view's window.
* WebProcess/ios/WebVideoFullscreenManager.mm: screenRect instead of clientRect
(WebKit::screenRectForNode): was clientRectForNode
(WebKit::WebVideoFullscreenManager::enterFullscreenForNode): use screenRectForNode
(WebKit::WebVideoFullscreenManager::exitFullscreenForNode): ditto
(WebKit::clientRectForNode): Deleted.

Canonical link: https://commits.webkit.org/153204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171635 268f45cc-cd09-0410-ab3c-d52691b4dbfc